# BeagleBone_AI-64

./: README.md  yocto.md
BeagleBone_AI-64/: Structure.txt
BeagleBone_AI-64/applications/device-manager/: CMakeLists.txt  Example.txt
BeagleBone_AI-64/applications/device-manager/include/device-manager/: Device.h  DeviceFactory.h  DeviceManager.h  DeviceManagerConfig.h  DeviceManagerEvents.h  DeviceTypes.h
BeagleBone_AI-64/applications/device-manager/src/: Device.cpp  DeviceFactory.cpp  DeviceManager.cpp  DeviceManagerConfig.cpp  DeviceManagerEvents-1.cpp  DeviceManagerEvents.cpp
BeagleBone_AI-64/applications/device-manager/tests/: DeviceFactoryTest.cpp  DeviceManagerTest.cpp  DeviceTest.cpp
BeagleBone_AI-64/applications/gui-app/: CMakeLists.txt
BeagleBone_AI-64/applications/gui-app/include/gui-app/: ChartModel-1.h  ChartModel.h  Dashboard-1.h  Dashboard.h  DataManager-1.h  DataManager.h  DeviceController-1.h  DeviceController.h  SensorClient-1.h  SensorClient.h  SettingsManager.h  ThemeManager.h
BeagleBone_AI-64/applications/gui-app/qml/: ChartWidget.qml  Dashboard.qml  DeviceControl.qml  NavigationBar.qml  SensorWidget.qml  SettingsPanel.qml  StatusBar.qml  main.qml
BeagleBone_AI-64/applications/gui-app/qml/components/: AlertBanner.qml  CircularGauge-1.qml  CircularGauge.qml  LinearGauge.qml  ProgressCircle.qml  ValueDisplay.qml
BeagleBone_AI-64/applications/gui-app/src/: ChartModel.cpp  Dashboard.cpp  DataManager.cpp  DeviceController.cpp  SensorClient.cpp  SettingsManager.cpp  ThemeManager.cpp  main.cpp
BeagleBone_AI-64/applications/gui-app/tests/: CMakeLists.txt  DashboardTest.cpp  DataManagerTest.cpp
BeagleBone_AI-64/applications/sensor-service/: CMakeLists.txt
BeagleBone_AI-64/applications/sensor-service/drivers/: GPSDriver.cpp  GPSDriver.h  HumidityDriver.cpp  HumidityDriver.h  IMUDriver.cpp  IMUDriver.h  PressureDriver.cpp  PressureDriver.h  TemperatureDriver.cpp  TemperatureDriver.h
BeagleBone_AI-64/applications/sensor-service/include/: Usage.txt
BeagleBone_AI-64/applications/sensor-service/include/sensor-service/: SensorConfig.h  SensorData.h  SensorDriver.h  SensorEvents.h  SensorManager-1.h  SensorManager.h  SensorService.h
BeagleBone_AI-64/applications/sensor-service/src/: SensorEvents.cpp  SensorManager.cpp  SensorService.cpp  main.cpp
BeagleBone_AI-64/applications/sensor-service/tests/: CMakeLists.txt  Run_tests.txt  SensorManagerTest.cpp  SensorServiceTest.cpp
BeagleBone_AI-64/ci/: GitHubActions.yml  GitLab-CI.yml  Jenkinsfile
BeagleBone_AI-64/docs/architecture/: boot-flow.md  software-stack.md  system-design.md
BeagleBone_AI-64/releases/: complete_release_structure.txt
BeagleBone_AI-64/releases/latest/: INSTALL.md  README.md  RELEASE_NOTES.md  UPGRADE.md  checksums.sha256
BeagleBone_AI-64/releases/v1.0/: README.md
BeagleBone_AI-64/releases/v1.1/: README.md
BeagleBone_AI-64/releases/v1.2.0/: README.md
BeagleBone_AI-64/scripts/: Usage.txt  build-image-1.sh  build-image.sh  clean-build.sh  compare_performance-1.sh  compare_performance.sh  create-sdk.sh  release.sh  run_integration_tests-1.sh  run_performance_tests-1.sh  setup-host.sh  sync-sources.sh
BeagleBone_AI-64/sdk/: SDK_Directory_Structure.txt
BeagleBone_AI-64/sdk/cmake/: FindYocto.cmake  yocto-config.cmake
BeagleBone_AI-64/sdk/docs/: sdk-guide.md
BeagleBone_AI-64/sdk/examples/IPC/: ipc_client.cpp
BeagleBone_AI-64/sdk/examples/Thread/: thread_pool_example.cpp
BeagleBone_AI-64/sdk/examples/hello-world/: hello.c
BeagleBone_AI-64/sdk/examples/qt-gui/: Building.txt  Resources  main.cpp
BeagleBone_AI-64/sdk/examples/sensor-reader/: CMakeLists.txt  sensor-reader.c
BeagleBone_AI-64/sdk/qmake/mkspecs/: README.md
BeagleBone_AI-64/sdk/qmake/mkspecs/linux-arm-gnueabi-g++/: qmake-1.conf
BeagleBone_AI-64/sdk/scripts/: deploy-target.sh  qmake-setup.sh
BeagleBone_AI-64/sources/meta-custom/conf/distro/: customdistro.conf
BeagleBone_AI-64/sources/meta-custom/conf/machine/: bbbai64.conf
BeagleBone_AI-64/sources/meta-custom/recipes-core/images/: custom-image.bb
BeagleBone_AI-64/sources/meta-custom/recipes-core/packagegroups/: packagegroup-gui-1.bb  packagegroup-gui.bb  packagegroup-iot.bb  packagegroup-sensors.bb
scripts/: flash-sdcard.sh  run_integration_tests.sh  run_performance_tests.sh
sdk/: README.md  environment-setup.sh
sdk/cmake/: Toolchain.cmake
sdk/docs/: api-reference.md  examples.md
sdk/examples/IPC/: ipc_server.cpp
sdk/examples/hello-world/: Makefile
sdk/examples/qt-gui/: CMakeLists.txt  main.qml
sdk/examples/sensor-reader/: Building.txt  Makefile  Makefile_1  sensor-reader-1.c
sdk/qmake/: qmake.conf
sdk/qmake/mkspecs/linux-arm-gnueabi-g++/: qmake.conf  qmake.conf-Platform-Specific  qplatformdefs-1.h  qplatformdefs.h
sdk/scripts/: Quick_Start  build-app.sh  prepare-sdk-1.sh  prepare-sdk.sh
sources/meta-custom/recipes-core/packagegroups/: image_recipe.txt  packagegroup-industrial.bb  packagegroup-sensors-1.bb  packagegroup-system.bb
